# xsj-kb

./: .env.example  .gitignore  README.md  opencode.json  pyproject.toml
.opencode/skills/xsj-kb-mcp/: SKILL.md
docs/: README.md
docs/mcp-audit-gateway/: audit-system.md  client-guide.md  overview.md  server.md
docs/scripts/: ragflow-delete.md  ragflow-meta.md  ragflow-parse.md  ragflow-sync.md  state-management.md
mcp/: __init__.py
mcp/client/: __init__.py
mcp/server/: __init__.py  audit.py  server.py
scripts/: README.md  ragflow_delete.py  ragflow_meta.py  ragflow_parse.py  ragflow_sources.json  ragflow_sync.py  state.py
