[project]
name = "xsj-kb"
version = "0.1.0"
description = "新视界鸿蒙知识库"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp"]
